# trezoa-rpc-client-extensions

./: .gitignore  README.md
js/: .eslintrc.cjs  package.json  pnpm-lock.yaml
js-v1/: .eslintrc.cjs  package.json  pnpm-lock.yaml
js-v1/examples/: package.json
js-v1/examples/src/: index.ts
js-v1/src/: rpc.ts  stake.ts
js/examples/: package.json
js/examples/src/: index.ts
js/src/: rpc.ts  stake.ts
rust/: Cargo.toml
rust/examples/: rpc.rs
rust/src/: lib.rs
