[package]
name = "trezoa-rpc-get-stake-activation"
version = "0.1.0"
description = "Client-side implementation of Trezoa RPC's GetStakeActivation"
documentation = "https://docs.rs/trezoa-rpc-get-stake-activation"
authors = ["Trezoa-team Maintainers <maintainers@trezoa.xyz>"]
repository = "https://github.com/trezoa-xyz/trezoa-rpc-client-extensions"
homepage = "https://trezoa.xyz/"
license = "Apache-2.0"
edition = "2021"

[dependencies]
bincode = "1.3.3"
serde = "1"
trezoa-rpc-client = "2.0.3"
trezoa-rpc-client-api = "2.0.3"
trezoa-sdk = "2.0.3"

[[example]]
name = "rpc"
